Only need to change sounds!

--- a/Crunchies/Crunchies/iPhone6Plus.storyboard
+++ b/Crunchies/Crunchies/iPhone6Plus.storyboard
@@ -24,9 +24,32 @@
                                 <nil key="highlightedColor"/>
                                 <color key="shadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="228" y="110" width="50" height="21"/>
+                                    <rect key="frame" x="228" y="110" width="58" height="21"/>
                                 </variation>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d1z-lr-wdN">
+                                <rect key="frame" x="10" y="209" width="300" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="Wut-Q7-BOj"/>
+                                    <constraint firstAttribute="width" constant="300" id="d7v-lx-2wC"/>
+                                    <constraint firstAttribute="height" constant="150" id="rrM-cr-a1u"/>
+                                    <constraint firstAttribute="height" constant="150" id="uTb-pb-Zth"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Wut-Q7-BOj"/>
+                                        <exclude reference="rrM-cr-a1u"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="Wut-Q7-BOj"/>
+                                        <exclude reference="d7v-lx-2wC"/>
+                                        <include reference="rrM-cr-a1u"/>
+                                        <exclude reference="uTb-pb-Zth"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RDc-RT-XyJ">
                                 <rect key="frame" x="116" y="90" width="58" height="21"/>
                                 <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="24"/>
@@ -44,33 +67,9 @@
                                 <nil key="highlightedColor"/>
                                 <color key="shadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="332" y="110" width="50" height="21"/>
+                                    <rect key="frame" x="332" y="110" width="58" height="21"/>
                                 </variation>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QiQ-vJ-fdJ">
-                                <rect key="frame" x="85" y="460" width="150" height="36"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="7CF-k0-X4z"/>
-                                    <constraint firstAttribute="width" constant="230" id="JR2-8n-4Ch"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="20"/>
-                                <state key="normal" title="Shuffle" backgroundImage="Button"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="7CF-k0-X4z"/>
-                                        <exclude reference="JR2-8n-4Ch"/>
-                                    </mask>
-                                </variation>
-                                <variation key="widthClass=compact">
-                                    <mask key="constraints">
-                                        <include reference="7CF-k0-X4z"/>
-                                        <include reference="JR2-8n-4Ch"/>
-                                    </mask>
-                                </variation>
-                                <connections>
-                                    <action selector="shuffleButtonPressed:" destination="3Eg-MX-B8G" eventType="touchUpInside" id="p9c-Ch-DYk"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NoE-YU-nhc">
                                 <rect key="frame" x="17.5" y="66" width="70" height="20"/>
                                 <color key="backgroundColor" red="0.12941176469999999" green="0.69019607839999997" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
@@ -146,50 +145,57 @@
                                 <nil key="highlightedColor"/>
                                 <color key="shadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="16" y="110" width="66" height="21"/>
+                                    <rect key="frame" x="16" y="110" width="58" height="21"/>
                                 </variation>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d1z-lr-wdN">
-                                <rect key="frame" x="10" y="209" width="300" height="150"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QiQ-vJ-fdJ">
+                                <rect key="frame" x="85" y="460" width="150" height="36"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="300" id="Wut-Q7-BOj"/>
-                                    <constraint firstAttribute="width" constant="300" id="d7v-lx-2wC"/>
-                                    <constraint firstAttribute="height" constant="150" id="rrM-cr-a1u"/>
-                                    <constraint firstAttribute="height" constant="150" id="uTb-pb-Zth"/>
+                                    <constraint firstAttribute="height" constant="60" id="8Zr-0H-Cck"/>
+                                    <constraint firstAttribute="width" constant="236" id="CkV-2h-Ke0"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="29"/>
+                                <state key="normal" title="Shuffle" backgroundImage="Button"/>
                                 <variation key="default">
                                     <mask key="constraints">
-                                        <exclude reference="Wut-Q7-BOj"/>
-                                        <exclude reference="rrM-cr-a1u"/>
+                                        <exclude reference="8Zr-0H-Cck"/>
+                                        <exclude reference="CkV-2h-Ke0"/>
                                     </mask>
                                 </variation>
                                 <variation key="widthClass=compact">
                                     <mask key="constraints">
-                                        <include reference="Wut-Q7-BOj"/>
-                                        <exclude reference="d7v-lx-2wC"/>
-                                        <include reference="rrM-cr-a1u"/>
-                                        <exclude reference="uTb-pb-Zth"/>
+                                        <include reference="8Zr-0H-Cck"/>
+                                        <include reference="CkV-2h-Ke0"/>
                                     </mask>
                                 </variation>
-                            </imageView>
+                                <connections>
+                                    <action selector="shuffleButtonPressed:" destination="3Eg-MX-B8G" eventType="touchUpInside" id="p9c-Ch-DYk"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="QiQ-vJ-fdJ" firstAttribute="leading" secondItem="Sty-9g-umT" secondAttribute="leadingMargin" constant="69" id="0V9-jM-05c"/>
                             <constraint firstAttribute="trailingMargin" secondItem="QiQ-vJ-fdJ" secondAttribute="trailing" constant="69" id="68h-Sn-69W"/>
+                            <constraint firstItem="QiQ-vJ-fdJ" firstAttribute="leading" secondItem="Sty-9g-umT" secondAttribute="leadingMargin" constant="66" id="BEf-db-FRK"/>
                             <constraint firstAttribute="trailingMargin" secondItem="d1z-lr-wdN" secondAttribute="trailing" constant="34" id="E94-jX-mi1"/>
                             <constraint firstItem="d1z-lr-wdN" firstAttribute="leading" secondItem="Sty-9g-umT" secondAttribute="leadingMargin" constant="-6" id="NhT-4a-ker"/>
                             <constraint firstItem="d1z-lr-wdN" firstAttribute="leading" secondItem="Sty-9g-umT" secondAttribute="leadingMargin" constant="34" id="PZO-Yv-ShR"/>
                             <constraint firstItem="d1z-lr-wdN" firstAttribute="top" secondItem="Sty-9g-umT" secondAttribute="topMargin" constant="218" id="U1P-dM-BhD"/>
                             <constraint firstItem="L15-hq-aM3" firstAttribute="top" secondItem="QiQ-vJ-fdJ" secondAttribute="bottom" constant="72" id="Zy9-ah-p0s"/>
                             <constraint firstItem="d1z-lr-wdN" firstAttribute="top" secondItem="Sty-9g-umT" secondAttribute="topMargin" constant="209" id="lv0-kK-efS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="QiQ-vJ-fdJ" secondAttribute="trailing" constant="66" id="mXz-ZJ-1BJ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="d1z-lr-wdN" secondAttribute="trailing" constant="-6" id="muq-67-PMj"/>
+                            <constraint firstItem="L15-hq-aM3" firstAttribute="top" secondItem="QiQ-vJ-fdJ" secondAttribute="bottom" constant="57" id="vMX-0C-iy3"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="E94-jX-mi1"/>
                                 <exclude reference="PZO-Yv-ShR"/>
                                 <exclude reference="U1P-dM-BhD"/>
+                                <exclude reference="BEf-db-FRK"/>
+                                <exclude reference="mXz-ZJ-1BJ"/>
+                                <exclude reference="vMX-0C-iy3"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -200,6 +206,12 @@
                                 <include reference="U1P-dM-BhD"/>
                                 <exclude reference="lv0-kK-efS"/>
                                 <exclude reference="muq-67-PMj"/>
+                                <exclude reference="0V9-jM-05c"/>
+                                <exclude reference="68h-Sn-69W"/>
+                                <include reference="BEf-db-FRK"/>
+                                <include reference="mXz-ZJ-1BJ"/>
+                                <exclude reference="Zy9-ah-p0s"/>
+                                <include reference="vMX-0C-iy3"/>
                             </mask>
                         </variation>
                     </view>
@@ -211,7 +223,7 @@
                         <outlet property="scoreLabel" destination="uVw-zY-6ma" id="yNX-N2-3qt"/>
                         <outlet property="shuffleButton" destination="QiQ-vJ-fdJ" id="ygU-AO-9rl"/>
                         <outlet property="targetLabel" destination="J15-te-IZu" id="rs1-aV-37h"/>
-                        <segue destination="gSF-Mb-TO3" kind="modal" identifier="resetGameElfin" id="nOW-eg-ZTf"/>
+                        <segue destination="gSF-Mb-TO3" kind="presentation" identifier="resetGameElfin" id="nOW-eg-ZTf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mNv-g8-Lst" sceneMemberID="firstResponder"/>
@@ -231,9 +243,6 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <connections>
-                        <segue destination="3Eg-MX-B8G" kind="modal" identifier="back" id="rsH-o3-bpW"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b30-L5-FHL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
